Changing out custom pluralization logic for .NET version

--- a/Monghost/Monghost.csproj
+++ b/Monghost/Monghost.csproj
@@ -38,8 +38,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="MongoEntity.cs" />
     <Compile Include="MongoHelper.cs" />
+    <Compile Include="Pluralization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
