--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\IntegrationTests\packages.config" />
   <repository path="..\MonGhost\packages.config" />
+  <repository path="..\Samples\packages.config" />
   <repository path="..\Test\packages.config" />
+  <repository path="..\UnitTests\packages.config" />
 </repositories>
