--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\IntegrationTests\packages.config" />
   <repository path="..\MonGhost\packages.config" />
+  <repository path="..\Mongonizer\packages.config" />
   <repository path="..\Samples\packages.config" />
   <repository path="..\Test\packages.config" />
   <repository path="..\UnitTests\packages.config" />
